MRS 3.5.1 example publish