@@ -12,21 +12,20 @@
 
 4. __Linux环境下__ 运行时：
 
-   修改 ***login()*** 方法中获取路径的逻辑。使用注释中标识Linux环境下的读取方式。
-
-   > eg:修改TestZKSample.login()
-   >
-   > ```java
-   > String userdir = System.getProperty("user.dir") + File.separator + "conf" + File.separator;
-   > ```
-
    若在 __安装客户端的Linux环境下运行__，需按照 __《HBase开发指南》1.4.2.1安装客户端时编译并运行程序__ 章节，将对应配置文件和认证文件放置到 ***“$BIGDATA_CLIENT_HOME/HBase/hbase/conf”*** 目录。
 
    若在 __未安装客户端Linux环境下运行__，需按照 __《HBase开发指南》1.4.2.2未安装客户端时编译并运行程序__ 章节，创建对应目录lib和conf，并分别上传对应依赖Jar包和配置文件的配置文件及认证文件。
+5. 选择需要编译的目标JDK版本，若不指定，默认编译JDK 8版本的jar包；编译时使用-P参数可以指定目标jar包版本，目前支持的有：
+   - -P build-with-jdk8
+   - -P build-with-jdk17
+   - -P build-with-jdk21
 
-5. 根据pom.xml 使用maven构建导包
+   注意：请不要使用低版本JDK编译高版本JDK的jar包
+6. 根据pom.xml 使用maven构建导包
 
-6. 运行 ***TestZKSample.java*** 
+7. 运行 ***TestZKSample.java***
+   注意：使用JDK8以上的版本运行前，需要在启动命令或配置中添加以下启动参数：
+   --add-modules jdk.unsupported --add-opens java.base/java.nio=ALL-UNNAMED
 
 ***Tips*** :  
 A.***connectApacheZK()*** 函数为连接开源zookeeper源使用，若未安装，进行配置，最后报错： ***org.apache.zookeeper.KeeperException$ConnectionLossException*** 为正常现象  
